--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,10 @@ ENV/
 
 # Rope project settings
 .ropeproject
+
+# local configuration files
+*.local.json
+
+# version files
+Versions/*.zip
+Versions/*.gzip
