Command Line UI
Added command line UI

--- a/config.json
+++ b/config.json
@@ -15,5 +15,6 @@
 	"description": "A file comparing tool",
 	"author": "Aaron Horeth",
 	"appDirectory": "C:\\DiffTool",
-	"versionDirectory": "C:\\DiffTool\\Versions"
+	"versionDirectory": "C:\\DiffTool\\Versions",
+	"schemaDirectory": "C:\\DiffTool\\Schema"
 }
