--- a/config.json
+++ b/config.json
@@ -10,12 +10,7 @@
 			"file": "darkTheme.json"
 		}
 	],
-	"version": "0.0.1",
 	"name": "Diff Tool",
 	"description": "A file comparing tool",
-	"author": "Aaron Horeth",
-	"appDirectory": "C:\\DiffTool",
-	"versionDirectory": "C:\\DiffTool\\Versions",
-	"schemaDirectory": "C:\\DiffTool\\Schema",
-	"projectDirectory": "C:\\DiffTool\\Projects"
+	"author": "Aaron Horeth"
 }
